--- a/src/simple.html
+++ b/src/simple.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-    
+        <div class="flex items-center justify-around my-[5vh]">
+             <img src="./Logo.png" alt="">
+             <div class="flex items-center justify-between border-[2px] w-[25%] p-[2vh] rounded-md">
+                   <p>Search bar</p>
+                   <img src="./Search.png" alt="">
+             </div>
+             <p>Category</p>
+             <p>Become an Mentor</p>
+             <p class="border-[2px] px-[4vh]  py-[1vh] rounded-md text-center">Login</p>
+             <p class="bg-pink-600 text-white px-[4vh]  py-[1vh] rounded-md text-center">Sign Up</p>
+        </div>
+        
+        <div class="flex ml-[3%] gap-[5vh]">
+              <p>Home</p>
+              <p><b>Programming Courses</b></p>
+        </div>
+        <h1 class="text-5xl text-gray-800 ml-[2.5%] my-[5vh]"><b>Programming Courses</b></h1>
+        <p class="ml-[3%]">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus <br> magna fringilla urna, porttitor rhoncus </p>
+        <h1 class="text-3xl text-gray-800 ml-[2.5%] my-[5vh]"><b>Most Popular Development Courses</b></h1>
 </body>
 </html>
