--- a/src/simple.html
+++ b/src/simple.html
@@ -1,30 +1,300 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="./output.css" rel="stylesheet">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Document</title>
+      <link href="./output.css" rel="stylesheet">
 </head>
+
 <body>
-        <div class="flex items-center justify-around my-[5vh]">
-             <img src="./Logo.png" alt="">
-             <div class="flex items-center justify-between border-[2px] w-[25%] p-[2vh] rounded-md">
-                   <p>Search bar</p>
-                   <img src="./Search.png" alt="">
-             </div>
-             <p>Category</p>
-             <p>Become an Mentor</p>
-             <p class="border-[2px] px-[4vh]  py-[1vh] rounded-md text-center">Login</p>
-             <p class="bg-pink-600 text-white px-[4vh]  py-[1vh] rounded-md text-center">Sign Up</p>
-        </div>
-        
-        <div class="flex ml-[3%] gap-[5vh]">
-              <p>Home</p>
-              <p><b>Programming Courses</b></p>
-        </div>
-        <h1 class="text-5xl text-gray-800 ml-[2.5%] my-[5vh]"><b>Programming Courses</b></h1>
-        <p class="ml-[3%]">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus <br> magna fringilla urna, porttitor rhoncus </p>
-        <h1 class="text-3xl text-gray-800 ml-[2.5%] my-[5vh]"><b>Most Popular Development Courses</b></h1>
+      <div class="flex items-center justify-around my-[5vh]">
+            <img src="./Logo.png" alt="">
+            <div class="flex items-center justify-between border-[2px] w-[25%] p-[2vh] rounded-md">
+                  <p>Search bar</p>
+                  <img src="./Search.png" alt="">
+            </div>
+            <p>Category</p>
+            <p>Become an Mentor</p>
+            <p class="border-[2px] px-[4vh]  py-[1vh] rounded-md text-center">Login</p>
+            <p class="bg-pink-600 text-white px-[4vh]  py-[1vh] rounded-md text-center">Sign Up</p>
+      </div>
+
+      <div class="flex ml-[3%] gap-[5vh]">
+            <p>Home</p>
+            <p><b>Programming Courses</b></p>
+      </div>
+      <h1 class="text-5xl text-gray-800 ml-[2.5%] my-[5vh]"><b>Programming Courses</b></h1>
+      <p class="ml-[3%]">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus
+            venenatis, lectus <br> magna fringilla urna, porttitor rhoncus </p>
+      <h1 class="text-3xl text-gray-800 ml-[2.5%] my-[5vh]"><b>Most Popular Development Courses</b></h1>
+      <div class="flex justify-center gap-[7vh] my-[10vh]">
+            <div class="shadow-2xl  w-[19%] pb-[4vh]">
+                  <img class="mx-[2vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[2vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>
+
+            <div class="shadow-2xl  w-[19%] px-[]">
+                  <img class="mx-[2vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[2vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>
+
+            <div class="shadow-2xl  w-[19%] px-[]">
+                  <img class="mx-[2vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[2vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>
+
+            <div class="shadow-2xl  w-[19%] px-[]">
+                  <img class="mx-[2vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[2vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>
+      </div>
+      <img class="absolute top-[95vh] left-[2vh]" src="./Arrow Left.png" alt="">
+      <img class="absolute top-[95vh] left-[200vh]" src="./Arrow Right.png" alt="">
+
+      <div class="flex mx-[10vh] justify-between mb-[10vh]">
+            <h1 class="text-slate-950 text-4xl"><b>Programming Topics</b></h1>
+            <p class="bg-pink-600 text-white px-[4vh] w-[10%]  py-[1vh] rounded-md text-center">See All</p>
+      </div>
+      <div class="flex mx-[10vh] justify-between">
+            <img src="./Python.png" alt="">
+            <img src="./Javascript.png" alt="">
+            <img src="./CSS.png" alt="">
+            <img src="./CSS.png" alt="">
+      </div>
+
+      <div class="flex mx-[10vh] justify-between my-[7vh]">
+            <img src="./Web Development.png" alt="">
+            <img src="./Data Science.png" alt="">
+            <img src="./Java.png" alt="">
+            <img src="./SQL.png" alt="">
+      </div>
+
+      <div class="flex mx-[10vh] justify-between my-[7vh]">
+            <h1 class="text-slate-900 text-5xl"><b>All Courses</b></h1>
+            <div class="flex gap-[5vh] items-center">
+                  <div class="bg-red-100 w-[40%] gap-[2vh] px-[3vh] py-[2vh] rounded-md  flex text-rose-700">
+                        <button>Filter</button>
+                        <img src="./dashboard.png" alt="">
+                  </div>
+                  <div class="bg-rose-700 w-[62%] gap-[2vh] px-[3vh] items-center py-[2vh] rounded-md  flex text-white">
+                        <button>Most Popular</button>
+                        <img src="./Arrow Chevron Right.png" alt="">
+                  </div>
+            </div>
+      </div>
+
+
+
+
+
+      <div class="flex mx-[10vh] gap-[10vh] my-[7vh]">
+            <div class="w-[27%] bg-slate-600">
+                  <div>
+                        <div class="flex justify-between my-[3vh]">
+                              <h1 class="text-3xl"><b>Ratings</b></h1>
+                              <img src="./Chevron Down.png" alt="">
+                        </div>
+                        <div class="flex items-center gap-[3vh]">
+                              <input type="checkbox">
+                              <img src="./Rating.png" alt="">
+                              <p><b>5</b></p>
+                              <p>(1242)</p>
+                        </div>
+                        <div class="flex items-center gap-[3vh] my-[2vh]">
+                              <input type="checkbox">
+                              <img src="./Rating (1).png" alt="">
+                              <p><b>4+</b></p>
+                              <p>(2145)</p>
+                        </div>
+                        <div class="flex items-center gap-[3vh] my-[2vh]">
+                              <input type="checkbox">
+                              <img src="./Rating (2).png" alt="">
+                              <p><b>3+</b></p>
+                              <p>(224)</p>
+                        </div>
+                        <div class="flex items-center gap-[3vh] my-[2vh]">
+                              <input type="checkbox">
+                              <img src="./Rating (3).png" alt="">
+                              <p><b>2+</b></p>
+                              <p>(2049)</p>
+                        </div>
+                        <div class="flex items-center gap-[3vh] my-[2vh]">
+                              <input type="checkbox">
+                              <img src="./Rating (4).png" alt="">
+                              <p><b>1+</b></p>
+                              <p>(2049)</p>
+                        </div>
+                  </div>
+                  <hr class="my-[4vh]">
+
+                <div>
+                   <div class="flex justify-between my-[3vh]">
+                        <h1 class="text-3xl"><b>Durations</b></h1>
+                        <img src="./Chevron Down.png" alt="">
+                   </div>
+                   <div class="flex items-center gap-[3vh]">
+                        <input type="checkbox">
+                        <p><b>1-3 Hours</b></p>
+                        <p>(1242)</p>
+                   </div>
+                   <div class="flex items-center gap-[3vh] my-[2vh]">
+                        <input type="checkbox">
+                        <p><b>3-6 Hours</b></p>
+                        <p>(2145)</p>
+                   </div>
+                   <div class="flex items-center gap-[3vh] my-[2vh]">
+                        <input type="checkbox">
+                        <p><b>6-12 Hours</b></p>
+                        <p>(224)</p>
+                   </div>
+                   <div class="flex items-center gap-[3vh] my-[2vh]">
+                        <input type="checkbox">
+                        <p><b>13+ Hours</b></p>
+                        <p>(2049)</p>
+                   </div>
+                </div>
+                <hr class="my-[4vh]">
+
+                <div>
+                  <div class="flex justify-between my-[3vh]">
+                       <h1 class="text-3xl"><b>Categories</b></h1>
+                       <img src="./Chevron Down.png" alt="">
+                  </div>
+                  <div class="flex items-center gap-[3vh]">
+                       <input type="checkbox">
+                       <p><b>Goland</b></p>
+                       <p>(1242)</p>
+                  </div>
+                  <div class="flex items-center gap-[3vh] my-[2vh]">
+                       <input type="checkbox">
+                       <p><b>Java</b></p>
+                       <p>(2145)</p>
+                  </div>
+                  <div class="flex items-center gap-[3vh] my-[2vh]">
+                       <input type="checkbox">
+                       <p><b>Flutter</b></p>
+                       <p>(224)</p>
+                  </div>
+                  <div class="flex items-center gap-[3vh] my-[2vh]">
+                       <input type="checkbox">
+                       <p><b>CSS</b></p>
+                       <p>(2049)</p>
+                  </div>
+               </div>
+               <hr class="my-[4vh]">
+
+
+               <div>
+                  <div class="flex justify-between my-[3vh]">
+                       <h1 class="text-3xl"><b>Level</b></h1>
+                       <img src="./Chevron Down.png" alt="">
+                  </div>
+                  <div class="flex items-center gap-[3vh]">
+                       <input type="checkbox">
+                       <p><b>Beginner</b></p>
+                       <p>(2049)</p>
+                  </div>
+                  <div class="flex items-center gap-[3vh] my-[2vh]">
+                       <input type="checkbox">
+                       <p><b>Intermediate</b></p>
+                       <p>(2049)</p>
+                  </div>
+                  <div class="flex items-center gap-[3vh] my-[2vh]">
+                       <input type="checkbox">
+                       <p><b>Expert</b></p>
+                       <p>(2049)</p>
+                  </div>
+               </div>
+               <hr class="my-[4vh]">
+
+
+               <div>
+                  <div class="flex justify-between my-[3vh]">
+                       <h1 class="text-3xl"><b>Language</b></h1>
+                       <img src="./Chevron Down.png" alt="">
+                  </div>
+                  <div class="flex items-center gap-[3vh]">
+                       <input type="checkbox">
+                       <p><b>English</b></p>
+                       <p>(1242)</p>
+                  </div>
+                  <div class="flex items-center gap-[3vh] my-[2vh]">
+                       <input type="checkbox">
+                       <p><b>Espanol</b></p>
+                       <p>(2145)</p>
+                  </div>
+                  <div class="flex items-center gap-[3vh] my-[2vh]">
+                       <input type="checkbox">
+                       <p><b>Melayu</b></p>
+                       <p>(224)</p>
+                  </div>
+                  <div class="flex items-center gap-[3vh] my-[2vh]">
+                       <input type="checkbox">
+                       <p><b>Bahasa Indonesia</b></p>
+                       <p>(2049)</p>
+                  </div>
+                  <div>
+                        <h1>Show more</h1>
+                  </div>
+               </div>
+               <hr class="my-[4vh]">
+
+         </div>
+      </div>
 </body>
+
 </html>
