--- a/src/simple.html
+++ b/src/simple.html
@@ -123,7 +123,7 @@
             <img src="./SQL.png" alt="">
       </div>
 
-      <div class="flex mx-[10vh] justify-between my-[7vh]">
+      <div class="flex mx-[10vh] mb-[30vh] justify-between my-[7vh]">
             <h1 class="text-slate-900 text-5xl"><b>All Courses</b></h1>
             <div class="flex gap-[5vh] items-center">
                   <div class="bg-red-100 w-[40%] gap-[2vh] px-[3vh] py-[2vh] rounded-md  flex text-rose-700">
@@ -141,8 +141,8 @@
 
 
 
-      <div class="flex mx-[10vh] gap-[10vh] my-[7vh]">
-            <div class="w-[27%] bg-slate-600">
+      <div class="flex mx-[10vh] gap-[4vh] my-[7vh]">
+            <div class="w-[27%] ">
                   <div>
                         <div class="flex justify-between my-[3vh]">
                               <h1 class="text-3xl"><b>Ratings</b></h1>
@@ -287,13 +287,193 @@
                        <p><b>Bahasa Indonesia</b></p>
                        <p>(2049)</p>
                   </div>
-                  <div>
-                        <h1>Show more</h1>
+                  <div class="flex gap-[3vh] items-center">
+                        <h1><b>Show more</b></h1>
+                        <img src="./Chevron Down.png" alt="">
                   </div>
                </div>
                <hr class="my-[4vh]">
-
+               <div class="flex justify-between items-center">
+                   <h1 class="text-4xl text-slate-950"><b>Price</b></h1>
+                   <img class="w-[10%]" src="./Chevron Down.png" alt="">
+               </div>
+               <hr class="my-[4vh]">
+               <div class="flex justify-between items-center">
+                  <h1 class="text-4xl text-slate-950"><b>Features</b></h1>
+                  <img class="w-[10%]" src="./Chevron Down.png" alt="">
+              </div>
          </div>
+          <p class="h-[211vh] bg-zinc-100 mx-[5vh] w-[2px]"></p>
+
+
+
+
+
+
+
+      <div class="flex justify-center gap-[7vh] my-[10vh] flex-wrap">
+
+            <div class="shadow-2xl  w-[30%] h-[66vh] mt-[-24vh]">
+                  <img class="mx-[4vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[2vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>        
+            <div class="shadow-2xl  w-[30%] h-[66vh] mt-[-24vh]">
+                  <img class="mx-[4vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[4vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>        
+            <div class="shadow-2xl  w-[30%] h-[66vh] mt-[-24vh]">
+                  <img class="mx-[4vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[2vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>    
+
+
+
+            <div class="shadow-2xl  w-[30%] h-[66vh] mt-[6vh]">
+                  <img class="mx-[4vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[2vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>        
+            <div class="shadow-2xl  w-[30%] h-[66vh] mt-[6vh]">
+                  <img class="mx-[4vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[4vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>        
+            <div class="shadow-2xl  w-[30%] h-[66vh] mt-[6vh]">
+                  <img class="mx-[4vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[2vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>    
+
+
+
+
+            <div class="shadow-2xl  w-[30%] h-[66vh] mt-[6vh]">
+                  <img class="mx-[4vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[2vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>        
+            <div class="shadow-2xl  w-[30%] h-[66vh] mt-[6vh]">
+                  <img class="mx-[4vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[4vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>        
+            <div class="shadow-2xl  w-[30%] h-[66vh] mt-[6vh]">
+                  <img class="mx-[4vh]" src="./Image Placeholder.png" alt="">
+                  <button class="bg-sky-600  text-white px-[4vh] py-[1vh] text-center rounded-md ml-[25%]">UI/UX
+                        Design</button>
+                  <div class="mx-[2vh]">
+                        <h1 class="text-xl my-[2vh]"><b>Interpersonal skills - work better with others!</b></h1>
+                        <p class="text-pink-600"><b>Tanah Air Team</b></p>
+                        <div class="flex items-center gap-[4vh] my-[2vh]">
+                              <img src="./Rating.png" alt="">
+                              <p>(2078)</p>
+                        </div>
+                        <div class="flex items-center gap-[4vh]">
+                              <p>$640</p>
+                              <h1 class="text-gray-950 text-3xl"><b>$384</b></h1>
+                        </div>
+                  </div>
+            </div>    
+      </div>
       </div>
 </body>
 
