--- a/src/simple.html
+++ b/src/simple.html
@@ -475,6 +475,48 @@
             </div>    
       </div>
       </div>
+
+      <div class="flex gap-[3vh] items-center justify-center mb-[5vh]">
+            <img src="./Group 421.png" alt="">
+            <p class="bg-pink-700 w-[2%] py-[0.4vh] rounded-md text-center text-white">1</p>
+            <p>2</p>
+            <p>3</p>
+            <p>4</p>
+            <p>5</p>
+            <img src="./Group 422.png" alt="">
+      </div>
+
+      <div class="bg-slate-950 text-white mx-[2vh] py-[5vh] pt-[10vh] px-[8vh] rounded-xl">
+            <div class="flex justify-between mb-[10vh]">
+                  <div>
+                        <img src="./Logotype.png" alt="">
+                        <p class="my-[5vh]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet <br> tristique placerat eleifend aliquam pellentesque facilisis <br> ultrices. Imperdiet mus urna egestas at tellus. </p>
+                  </div>
+                  <div>
+                        <p class="mb-[4vh] text-3xl"><b>About</b></p>
+                        <p>About us</p>
+                        <p>Courses</p>
+                        <p>Mentor</p>
+                        <p>Contact Us</p>
+                  </div>
+                  <div>
+                        <p class="mb-[4vh] text-3xl"><b>Support</b></p>
+                        <p>Careers</p>
+                        <p>Help & Support</p>
+                        <p>Blog</p>
+                  </div>
+                  <div>
+                        <p class="mb-[4vh] text-3xl"><b>Company</b></p>
+                        <p>Privacy Policy</p>
+                        <p>Terms of Service</p>
+                        <p>Code of Conduct</p>
+                  </div>
+            </div>
+            <div class="justify-between flex">
+                  <p>Privacy Policy &nbsp; &nbsp;&nbsp; Terms and Condition</p>
+                  <p>@2020 TanahAir Studio. All rights reserved.</p>
+            </div>
+      </div>
 </body>
 
 </html>
