--- a/src/simple.html
+++ b/src/simple.html
@@ -486,7 +486,7 @@
             <img src="./Group 422.png" alt="">
       </div>
 
-      <div class="bg-slate-950 text-white mx-[2vh] py-[5vh] pt-[10vh] px-[8vh] rounded-xl">
+      <div class="bg-slate-950 text-white m-[2vh] py-[5vh] pt-[10vh] px-[8vh] rounded-xl">
             <div class="flex justify-between mb-[10vh]">
                   <div>
                         <img src="./Logotype.png" alt="">
@@ -517,7 +517,7 @@
                   <p>@2020 TanahAir Studio. All rights reserved.</p>
             </div>
       </div>
-      Aliakbar
+      
 </body>
 
 </html>
